--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ body{
     background-color:#A7001E;
     border: 1px solid #ccc;
     border-radius: 5px;
+    color: #7aa95c;
+    font-size: 0.5rem;
   }
 
   footer{
@@ -85,7 +87,7 @@ body{
   }
   .calculator{
     height: 100%;
-    width: 60%;
+    width: 90%;
     display: inline-flex;
     flex-direction: column;
 
@@ -103,7 +105,7 @@ body{
   }
 
   .calculator-display{
-    height: 3rem;
+    height: 4rem;
     width: 97%;
 
   }
