--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
     border: 1px solid #ccc;
     border-radius: 5px;
     color: #7aa95c;
-    font-size: 0.5rem;
+    font-size: larger;
   }
 
   footer{
