--- a/style.css
+++ b/style.css
@@ -105,13 +105,16 @@ body{
     margin: 1rem 1rem;
   }
 
-  .calculator-display{
-    margin-top:3rem;
+  .calculator-display {
+    margin-top: 3rem;
     height: 5rem;
     width: 95%;
     font-size: 3rem;
     display: flex;
     align-items: center;
+    flex-direction: row;
+    justify-content: end;
+    padding-right: 1rem;
   }
 
 
